# OOP_lab1

./: CMakeLists.txt  lab1.cpp
include/: numbers_from_string.h
src/: numbers_from_string.cpp
test/: tests.cpp
